# GLGE_Math

./: .gitignore  CMakeLists.txt  GLGEMath.h  GLGE_Common.cpp  README.md
Imaginary/: Imaginary.h
Imaginary/Quaternions/: Quaternion.cpp  Quaternion.h
Matrix/doubles/: GLGEMatDoubles.h  GLGE_dmat2.cpp  GLGE_dmat2.h  GLGE_dmat3.cpp  GLGE_dmat3.h  GLGE_dmat4.cpp  GLGE_dmat4.h
Matrix/floats/: GLGEMatFloats.h  GLGE_mat2.cpp  GLGE_mat2.h  GLGE_mat3.cpp  GLGE_mat3.h  GLGE_mat4.cpp  GLGE_mat4.h
Vector/: VectorCast.hpp
Vector/doubles/: GLGEVecDoubles.h  GLGE_dvec2.cpp  GLGE_dvec2.h  GLGE_dvec3.cpp  GLGE_dvec3.h  GLGE_dvec4.cpp  GLGE_dvec4.h
Vector/floats/: GLGE_vec3.h  GLGE_vec4.cpp  GLGE_vec4.h
Vector/int32_t/: GLGE_ivec2.h  GLGE_ivec3.h  GLGE_ivec4.cpp  GLGE_ivec4.h
Vector/uint32_t/: GLGEVecUInts.h  GLGE_uivec2.cpp  GLGE_uivec2.h  GLGE_uivec3.h  GLGE_uivec4.cpp  GLGE_uivec4.h
src/: main.cpp
src/GLGEMath/: CMakeLists.txt  GLGEMath.h  GLGEMath_Settings.h  GLGE_Common.h
src/GLGEMath/Imaginary/Quaternions/: Quaternion.h
src/GLGEMath/Vector/doubles/: GLGE_dvec2.h  GLGE_dvec3.h  GLGE_dvec4.h
src/GLGEMath/Vector/floats/: GLGEVecFloats.h  GLGE_vec2.cpp  GLGE_vec2.h  GLGE_vec3.cpp  GLGE_vec3.h  GLGE_vec4.h
src/GLGEMath/Vector/int32_t/: GLGEVecInts.h  GLGE_ivec2.cpp  GLGE_ivec2.h  GLGE_ivec3.cpp  GLGE_ivec3.h  GLGE_ivec4.cpp  GLGE_ivec4.h
src/GLGEMath/Vector/uint32_t/: GLGE_uivec2.h  GLGE_uivec3.cpp  GLGE_uivec3.h  GLGE_uivec4.cpp  GLGE_uivec4.h
